[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://main_menu/imgs/credits_default.png" type="Texture" id=3]
[ext_resource path="res://main_menu/imgs/play_default.png" type="Texture" id=4]
[ext_resource path="res://main_menu/imgs/quit_hover.png" type="Texture" id=5]
[ext_resource path="res://main_menu/imgs/controls_hover.png" type="Texture" id=6]
[ext_resource path="res://main_menu/imgs/quit_default.png" type="Texture" id=7]
[ext_resource path="res://main_menu/imgs/credits_hover.png" type="Texture" id=8]
[ext_resource path="res://main_menu/imgs/controls_default.png" type="Texture" id=9]
[ext_resource path="res://main_menu/MenuMoon.tscn" type="PackedScene" id=10]
[ext_resource path="res://soundtracks/neon_renegade_main_menu.wav" type="AudioStream" id=11]
[ext_resource path="res://main_menu/imgs/play_select.png" type="Texture" id=12]
[ext_resource path="res://main_menu/imgs/controls_select.png" type="Texture" id=13]
[ext_resource path="res://main_menu/imgs/quit_select.png" type="Texture" id=14]
[ext_resource path="res://main_menu/imgs/credits_select.png" type="Texture" id=15]
[ext_resource path="res://main_menu/imgs/play_hover.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 10
extra_spacing_char = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.03
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.1
margin_right = 825.6
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.909804, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "ARTEMIS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
anchor_left = 0.02
anchor_top = 0.3
anchor_right = 0.02
anchor_bottom = 0.3
margin_right = 190.0
margin_bottom = 90.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="."]
anchor_left = 0.02
anchor_top = 0.4
anchor_right = 0.02
anchor_bottom = 0.4
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="."]
anchor_left = 0.02
anchor_top = 0.5
anchor_right = 0.02
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
anchor_left = 0.02
anchor_top = 0.65
anchor_right = 0.02
anchor_bottom = 0.65
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMoon" parent="." instance=ExtResource( 10 )]

[node name="MenuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="MenuSong" to="." method="_on_MenuSong_finished"]
